# moxcms

./: .gitignore  Cargo.toml  README.md
.github/workflows/: asm_audit.yml  build_push.yml  mirroring.yaml  nightly_fuzzing.yml
app/: Cargo.toml
app/benches/icc/: main.rs
app/benches/math/: main.rs
app/src/: comparison.rs  encode_gray_lut.rs  main.rs  xyb.rs  xyb_profile.icc
ci/: asm-audit.sh
ci/asm-audit/: questioned-functions.txt
fuzz/: Cargo.toml
src/: chad.rs  cicp.rs  defaults.rs  gamma.rs  helpers.rs  ictcp.rs  lib.rs  matrix.rs  nd_array.rs  profile.rs  reader.rs  transform.rs  trc.rs  writer.rs  yrg.rs
src/conversions/: bpc.rs  gray2rgb.rs  gray2rgb_extended.rs  interpolator.rs  lut3x3.rs  lut3x4.rs  lut4.rs  lut_transforms.rs  mab.rs  mab4x3.rs  mba3x4.rs  mod.rs  prelude_lut_xyz_rgb.rs  rgb2gray.rs  rgb2gray_extended.rs  rgb_xyz_factory.rs  rgbxyz.rs  rgbxyz_fixed.rs  rgbxyz_float.rs  simd.rs  tetrahedral.rs  transform_lut3_to_3.rs  transform_lut3_to_4.rs  transform_lut4_to_3.rs  transform_lut4_to_4.rs  xyz_lab.rs
src/conversions/avx/: interpolator.rs  interpolator_q0_15.rs  lut4_to_3.rs  lut4_to_3_q0_15.rs  mod.rs  rgb_xyz.rs  rgb_xyz_opt.rs  rgb_xyz_q2_13.rs  rgb_xyz_q2_13_opt.rs  t_lut3_to_3.rs  t_lut3_to_3_q0_15.rs  tetrahedral.rs  transform_lut3_to_3.rs
src/conversions/avx512/: rgb_xyz_opt.rs  rgb_xyz_q2_13_opt.rs
src/conversions/katana/: md3x3.rs  md4x3.rs  md_3xn.rs  md_nx3.rs  md_pipeline.rs  pcs_stages.rs  rgb_xyz.rs  xyz_rgb.rs
src/conversions/neon/: interpolator.rs  interpolator_q0_15.rs  interpolator_q2_14.rs  lut4_to_3.rs  lut4_to_3_q0_15.rs  lut4_to_3q.rs  mod.rs  rgb_xyz.rs  rgb_xyz_opt.rs  rgb_xyz_q1_30_opt.rs  rgb_xyz_q2_13.rs  rgb_xyz_q2_13_opt.rs  t_lut3_to_3.rs  t_lut3_to_3_q0_15.rs  tetrahedral.rs
src/conversions/sse/: interpolator.rs  interpolator_q0_15.rs  lut4_to_3.rs  lut4_to_3_q0_15.rs  mod.rs  rgb_xyz.rs  rgb_xyz_opt.rs  rgb_xyz_q2_13.rs  rgb_xyz_q2_13_opt.rs  t_lut3_to_3.rs  t_lut3_to_3_q0_15.rs  tetrahedral.rs  transform_lut3_to_3.rs
src/conversions/sve/: mod.rs  rgb_xyz_q2_13_opt.rs
src/interceptors/: cmyka.rs
src/matan/: curve_shape.rs  mod.rs
src/math/: cbrtf.rs  log10f.rs  log2f.rs  mod.rs  trigo.rs
