workspace = { members = ["app", "fuzz"] }

[package]
name = "moxcms"
version = "0.7.11"
edition = "2024"
description = "Simple Color Management in Rust"
readme = "./README.md"
keywords = ["icc", "cms", "color", "cmyk"]
license = "BSD-3-Clause OR Apache-2.0"
authors = ["Radzivon Bartoshyk"]
documentation = "https://github.com/awxkee/moxcms"
categories = ["multimedia::images"]
homepage = "https://github.com/awxkee/moxcms"
repository = "https://github.com/awxkee/moxcms.git"
exclude = ["*.jpg", "../../assets/*", "*.png", "*.icc", "./assets/*"]
rust-version = "1.85.0"

[dependencies]
num-traits = "0.2"
pxfm = "^0.1.1"

[dev-dependencies]
rand = "0.9"

[features]
# If no unsafe intrinsics active then `forbid(unsafe)` will be used.
default = ["avx", "sse", "neon"]
# Enables AVX2 acceleration where possible
avx = []
# Enables SSE4.1 acceleration where possible
sse = []
# Enables NEON intrinsics where possible
neon = []
# Enables AVX-512 acceleration where possible. This will work only from 1.89 on stable.
avx512 = []
# Allows configuring interpolation methods and LUT weights precision.
# Disabled by default to prevent binary bloat.
options = []
# This feature is required for one who wants to work with more than 4 channels ICC profiles, except CMYKA.
# This is required as for handling unusual 1-2 channels LUTs.
# Optimizations in this library heavily depends on curves quantizing and fuzing many curves into one using interpolation.
# That places a requirement that curves in profile should be monothonic and continious, and do not have long
# degenerations at boundaries. Many CMYK have curves that do not fall under those requiremenent, so if accurate
# color reproduction is neccessary for broad amount of LUT profiles, this feature is mandatory. 
any_to_any = []

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open --manifest-path ./Cargo.toml
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.profiling]
inherits = "release"
debug = true
