[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { version = "=0.25.4", default-features = false }
moxcms = { path = "../", default-features = false, features = ["sse", "avx512", "neon_shaper_fixed_point_paths", "neon_shaper_paths", "sse_shaper_fixed_point_paths", "sse_shaper_optimized_paths", "sse_shaper_paths", "avx_shaper_paths", "avx_shaper_fixed_point_paths", "avx512_shaper_fixed_point_paths", "avx512_shaper_optimized_paths"] }
lcms2 = "6.1.0"
#jxl-oxide = {path = "../../../RustroverProjects/jxl-oxide/crates/jxl-oxide", features = ["moxcms", "lcms2"]}
zune-jpeg = "0.5.0-rc2"
qcms = "0.3.0"
rand = "0.9.0"
libm = "0.2.15"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }

[[bench]]
name = "icc"
harness = false

[[bench]]
name = "lut"
harness = false
