[package]
name = "app-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.moxcms]
path = ".."
features = ["options"]

[features]
default = ["moxcms/options"]
avx = ["moxcms/avx_luts", "moxcms/avx_shaper_fixed_point_paths", "moxcms/avx_shaper_optimized_paths", "moxcms/avx_shaper_paths"]
sse = ["moxcms/sse_luts", "moxcms/sse_shaper_fixed_point_paths", "moxcms/sse_shaper_optimized_paths", "moxcms/sse_shaper_paths"]
neon = ["moxcms/neon_luts", "moxcms/neon_shaper_fixed_point_paths", "moxcms/neon_shaper_optimized_paths", "moxcms/neon_shaper_paths"]

[[bin]]
name = "unsafe"
path = "unsafe/unsafe.rs"
test = false
doc = false
bench = false

[[bin]]
name = "safe_read"
path = "safe_read/safe_read.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lut"
path = "lut/lut.rs"
test = false
doc = false
bench = false

[[bin]]
name = "safe_read_create"
path = "safe_read_create/safe_read_create.rs"
test = false
doc = false
bench = false